--- a/ProjectManagement/src/main/resources/templates/memberscrum_board.html
+++ b/ProjectManagement/src/main/resources/templates/memberscrum_board.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,8 +20,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
     <link href="/styles.css" rel="stylesheet"  type="text/css">
-    <link href="/styles.css" rel="stylesheet"  type="text/css">
-</head>
+    <title>Scrum Board</title>
 <div class="main-content" style="border-radius: 10px;">
     <p class="text-center" style="font-size: x-large; font-weight: bolder;">
         <span th:text="${group.groupName}"></span>
@@ -112,7 +113,7 @@
                                         <span th:text="${member.username}"></span>
                                      <span th:text="${member.firstName}"></span>
                                        <span th:text="${member.lastName}"></span>
-                                       <span th:text="${member.bio}"></span>
+
 
                                  </h3>
                                 </div>
@@ -286,7 +287,8 @@ function getTaskDetailchecking(taskName, deadline, member, description, document
         '<h3>Task Name: ' + taskName + '</h3>' +
         '<p>Deadline: ' + deadline + '</p>' +
         '<p>Member: ' + member + '</p>' +
-        '<p>Description: ' + description + '</p>' 
+        '<p>Description: ' + description + '</p>' +
+        '<p>Status: Pending</p>'
     );
     $('#changestatetoDone').data('task-id', documentId);
     $('#changestatetoToDo').data('task-id', documentId);
