--- a/ProjectManagement/src/main/resources/templates/homestudent.html
+++ b/ProjectManagement/src/main/resources/templates/homestudent.html
@@ -17,6 +17,25 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <title>Home</title>
     <style>
+        table{
+            border-collapse: collapse;
+            border-color:  #ddd;
+            font-size: 14px;
+            text-align: center;
+            width: 100%;
+            padding: 20px;
+            background-color: #8eb6ee;
+            border-radius: 15px;
+        }
+        .tablehead{
+            background-color: #F5F5F5;
+            height: 50px;
+
+        }
+        td{
+            border-bottom: 1px solid #ddd;
+            padding: 8px;
+        }
 
     </style>
 </head>
@@ -24,9 +43,41 @@
 <div class="row" >
     <!-- สำหรับรับค่า Menubar -->
     <div class="sidebar col-3"></div>
+
     <!-- ใส่คอนเท้นหลัก บริเวณด้านซ้าย -->
     <div class="col-9 main-content">
+    <!-- task zone   -->
+        
+    <div class="container">
+    <table>
+        <tr class="tablehead">
+            <th>Task Name</th>
+            <th>Task Description</th>
+            <th>Task Status</th>
+            <th>Task deadline</th>
+        </tr>
+        <tr th:each="task :${taskList}">
+            <td th:text="${task.taskName}"></td>
+            <td th:text="${task.description}"></td>
+            <td th:text="${task.status}"></td>
+            <td th:text="${task.deadline}"></td>
+        </tr>
 
+    </table>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+        <!-- task zone -->
+    </div>
     </div>
 </div>
 <script src="assets/plugins/global/plugins.bundle.js"></script>
